Refactors asset and interface systems for modularity
Refactors asset classes to improve modularity, including enhanced
handling of positions, dimensions, rotations, and parent-child
relationships. Updates inventory and interface logic to support
customized slot textures, dynamic scaling, and optimized rendering.

Refactored modeling and animation system to support architectural differences between primary assets and items with the purpose of integrating into the jMonkeyEngine renderer.

Introduces new utility methods and classes for improved code
reuse and readability. Removes deprecated methods and redundant
comments. Addresses edge cases in animation and layout generation.

These changes aim to enhance flexibility, maintainability, and
support for dynamic customization in asset, rendering, and interface systems.